# yalsat

./: .gitignore  CMakeLists.txt  README.md  clangd-template  main.c  verbose.out  yals.c  yals.h
examples/: random.cnf
include/: yals.h  yals_ext.h  yils.h
include/gpu/: gpu.h  yalsg.cuh
old/: README.md
src/cpu/: config.c  yals.c  yalsg.c
src/gpu/: db.cu  flip.cu
